multipod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ns-deployment
spec:
  selector:
    matchLabels:
      app: ns
  replicas: 1
  template:
    metadata:
      labels:
        app: ns
    spec:
      containers:
      - name: sonar
        image: sonarqube:8.9.1-community
        ports:
        - containerPort: 9000
      - name: nginx
        image: nginx:1.7.9
        ports:
        - containerPort: 80
