multipod/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ns-deployment
spec:
  ports:
  - name: nginx
    port: 80
    protocol: TCP
    targetPort: 80
  - name: sonar
    port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: ns
