multipod/ns-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-ns
spec:
  rules:
  - host: sonar.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
           serviceName: ns-deployment
           servicePort: 9000
  - host: nginx.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
           serviceName: ns-deployment
           servicePort: 80
